[tool.poetry]
name = "reddit-subscriber"
version = "0.1.0"
description = ""
authors = ["Aravind Vasudevan <aravind_vasudevan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
praw = "7.1.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
